--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-animate": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
